# family-costs-bot-3

./: .coveragerc  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  TEST_PLAN.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  requrements.txt
.claude/agent-memory/architect/: MEMORY.md
.claude/agents/: architect.md  developer.md  tester.md
.cursor/: AGENTS.md  CODE_REVIEW.md  COMPLETION_REPORT.md  COMPREHENSIVE_TEST_PLAN.md  FINAL_REPORT.md  ORCHESTRATION_SUMMARY.md  TEST_RESULTS.md  USER_GUIDE.md
.github/workflows/: ci-cd.yml  tests.yml
bot/: config.py  constants.py  exceptions.py  logging_config.py  main.py  middleware.py  security.py  utils.py
bot/db/: base.py  dependencies.py  models.py  session.py
bot/db/repositories/: messages.py  users.py
bot/handlers/: __init__.py  common.py  messages.py  start.py
bot/routers/: __init__.py  common.py  import_cmd.py  menu.py  messages.py
bot/services/: message_parser.py
bot/web/: __init__.py  app.py  auth.py  costs.py  logs.py  profile.py  users.py
bot/web/static/: costs.css  style.css
bot/web/templates/: base.html  select.html  success.html  upload.html
bot/web/templates/costs/: base.html  form.html  list.html  login.html
bot/web/templates/logs/: index.html
bot/web/templates/profile/: change_password.html
bot/web/templates/users/: form.html  list.html
migrations/: env.py
migrations/versions/: 4c5c3f6f8088_add_index_on_user_id.py  5820802edcb7_add_check_constraint_on_user_id.py  88c80207b946_create_messages_table.py  a1b2c3d4e5f6_create_users_table.py  b2c3d4e5f6a7_add_role_to_users.py  c3d4e5f6a7b8_messages_user_id_to_bigint.py  d4e5f6a7b8c9_add_password_hash_to_users.py
tests/: conftest.py
tests/e2e/: TEST_PLAN.md  test_admin_e2e.py
tests/integration/: conftest.py  test_costs_api.py  test_costs_e2e.py  test_database_operations.py  test_handle_message_e2e.py  test_save_message.py  test_telegram_api_integration.py  test_web_api.py
tests/unit/: conftest.py  test_auth_routes.py  test_common_handlers.py  test_config.py  test_costs.py  test_dependencies.py  test_import_handler.py  test_logging_config.py  test_main.py  test_menu_handler.py  test_message_parser.py  test_messages_handler.py  test_messages_repository.py  test_middleware.py  test_profile_routes.py  test_security.py  test_users_repository.py  test_users_routes.py  test_utils.py  test_web.py
