[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "family-costs-bot"
version = "1.0.0"
description = "Telegram бот для учёта семейных расходов"
readme = "README.md"
requires-python = ">=3.11,<3.15"
dependencies = [
    "sqlalchemy~=2.0.0",
    "asyncpg~=0.31.0",
    "greenlet~=3.3.0",
    "pydantic-settings~=2.12.0",
    "python-dotenv~=1.2.0",
    "aiogram~=3.23.0",
]

[project.optional-dependencies]
dev = [
    "pytest~=9.0.0",
    "pytest-asyncio~=1.3.0",
    "pytest-cov~=7.0.0",
    "mypy~=1.19.0",
    "ruff~=0.14.0",
    "alembic~=1.17.0",
    "pre-commit~=4.0.0",
    "aioresponses~=0.7.0",
    "httpx~=0.28.0",
]

# ============================================================================
# Ruff - линтер и форматтер
# ============================================================================
[tool.ruff]
line-length = 120
target-version = "py310"
extend-exclude = [
    ".venv",
    "venv",
    "migrations",
]

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "N",     # pep8-naming
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "A",     # flake8-builtins
    "C4",    # flake8-comprehensions
    "DTZ",   # flake8-datetimez
    "PIE",   # flake8-pie
    "PT",    # flake8-pytest-style
    "RET",   # flake8-return
    "SIM",   # flake8-simplify
    "ARG",   # flake8-unused-arguments
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults (FastAPI/aiogram Depends)
    "UP007",  # Use `X | Y` for type annotations (предпочитаем Optional[X])
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ARG", "PT011"]  # unused arguments ok in tests, pytest.raises без match
"__init__.py" = ["F401"]      # unused imports ok in __init__

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

# ============================================================================
# MyPy - проверка типов
# ============================================================================
[tool.mypy]
python_version = "3.11"
plugins = ["pydantic.mypy"]
ignore_missing_imports = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = false
warn_unreachable = true
pretty = true

# ============================================================================
# Pytest - тестирование
# ============================================================================
[tool.pytest.ini_options]
pythonpath = "."
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--disable-warnings",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
]

# ============================================================================
# Coverage - покрытие тестами
# ============================================================================
[tool.coverage.run]
source = ["bot"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/migrations/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if TYPE_CHECKING:",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

